src/main/bkit/parser/.antlr/BKITParser.py
# Generated from e:\BK\Principles of Programing Languages\assignment\assignment1\src\main\bkit\parser\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'Body'", "'Break'", "'Continue'", 
                     "'Do'", "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", 
                     "'EndFor'", "'EndWhile'", "'For'", "'Function'", "'If'", 
                     "'Parameter'", "'Return'", "'Then'", "'Var'", "'While'", 
                     "'EndDo'", "'='", "'+'", "'-'", "'*'", "'\\'", "'%'", 
                     "'+.'", "'-.'", "'*.'", "'\\.'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'=/='", 
                     "'<.'", "'>.'", "'<=.'", "'>=.'", "'.'", "','", "';'", 
                     "':'", "'{'", "'}'", "'('", "')'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "ID", "BODY", "BREAK", "CONTINUE", "DO", 
                      "ELSE", "ELSE_IF", "END_BODY", "END_IF", "END_FOR", 
                      "END_WHILE", "FOR", "FUNCTION", "IF", "PARAM", "RETURN", 
                      "THEN", "VAR", "WHILE", "END_DO", "ASSIGN", "ADD", 
                      "SUB", "MUL", "DIV", "MOD", "ADDF", "SUBF", "MULF", 
                      "DIVF", "NOT", "AND", "OR", "EQ", "NEQ", "LT", "GT", 
                      "LTE", "GTE", "NEQF", "LTF", "GTF", "LTEF", "GTEF", 
                      "DOT", "COMMA", "SEMI", "COLON", "LB", "RB", "LP", 
                      "RP", "LS", "RS", "INT_LIT", "FLOAT_LIT", "BOOL_LIT", 
                      "STRING_LIT", "ARRAY_LIT", "ARRAY_ELEM", "COMMENT", 
                      "WS", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "UNTERMINATED_COMMENT", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_var_declarations = 1
    RULE_function_declarations = 2
    RULE_var_declaration = 3
    RULE_var_indentifier = 4
    RULE_array_dimension = 5
    RULE_literal = 6
    RULE_function_declaration = 7
    RULE_param_declaration = 8
    RULE_function_body = 9
    RULE_statements = 10
    RULE_stmt_assignment = 11
    RULE_stmt_if = 12
    RULE_stmt_for = 13
    RULE_for_iterator = 14
    RULE_stmt_while = 15
    RULE_stmt_do_while = 16
    RULE_stmt_break = 17
    RULE_stmt_continue = 18
    RULE_stmt_call = 19
    RULE_call_expression = 20
    RULE_call_param_list = 21
    RULE_stmt_return = 22
    RULE_exp = 23
    RULE_exp2 = 24
    RULE_exp3 = 25
    RULE_exp4 = 26
    RULE_exp5 = 27
    RULE_exp6 = 28
    RULE_exp7 = 29
    RULE_exp8 = 30
    RULE_op_rel = 31
    RULE_op_log_binary = 32
    RULE_op_add = 33
    RULE_op_mul = 34
    RULE_op_log_unary = 35
    RULE_op_sign = 36

    ruleNames =  [ "program", "var_declarations", "function_declarations", 
                   "var_declaration", "var_indentifier", "array_dimension", 
                   "literal", "function_declaration", "param_declaration", 
                   "function_body", "statements", "stmt_assignment", "stmt_if", 
                   "stmt_for", "for_iterator", "stmt_while", "stmt_do_while", 
                   "stmt_break", "stmt_continue", "stmt_call", "call_expression", 
                   "call_param_list", "stmt_return", "exp", "exp2", "exp3", 
                   "exp4", "exp5", "exp6", "exp7", "exp8", "op_rel", "op_log_binary", 
                   "op_add", "op_mul", "op_log_unary", "op_sign" ]

    EOF = Token.EOF
    ID=1
    BODY=2
    BREAK=3
    CONTINUE=4
    DO=5
    ELSE=6
    ELSE_IF=7
    END_BODY=8
    END_IF=9
    END_FOR=10
    END_WHILE=11
    FOR=12
    FUNCTION=13
    IF=14
    PARAM=15
    RETURN=16
    THEN=17
    VAR=18
    WHILE=19
    END_DO=20
    ASSIGN=21
    ADD=22
    SUB=23
    MUL=24
    DIV=25
    MOD=26
    ADDF=27
    SUBF=28
    MULF=29
    DIVF=30
    NOT=31
    AND=32
    OR=33
    EQ=34
    NEQ=35
    LT=36
    GT=37
    LTE=38
    GTE=39
    NEQF=40
    LTF=41
    GTF=42
    LTEF=43
    GTEF=44
    DOT=45
    COMMA=46
    SEMI=47
    COLON=48
    LB=49
    RB=50
    LP=51
    RP=52
    LS=53
    RS=54
    INT_LIT=55
    FLOAT_LIT=56
    BOOL_LIT=57
    STRING_LIT=58
    ARRAY_LIT=59
    ARRAY_ELEM=60
    COMMENT=61
    WS=62
    ILLEGAL_ESCAPE=63
    UNCLOSE_STRING=64
    UNTERMINATED_COMMENT=65
    ERROR_CHAR=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declarations(self):
            return self.getTypedRuleContext(BKITParser.Var_declarationsContext,0)


        def function_declarations(self):
            return self.getTypedRuleContext(BKITParser.Function_declarationsContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.var_declarations()
            self.state = 75
            self.function_declarations()
            self.state = 76
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declarationContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_var_declarations




    def var_declarations(self):

        localctx = BKITParser.Var_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 78
                self.var_declaration()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Function_declarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.Function_declarationContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_function_declarations




    def function_declarations(self):

        localctx = BKITParser.Function_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 84
                self.function_declaration()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def var_indentifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_indentifierContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_indentifierContext,i)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ASSIGN)
            else:
                return self.getToken(BKITParser.ASSIGN, i)

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.LiteralContext)
            else:
                return self.getTypedRuleContext(BKITParser.LiteralContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_var_declaration




    def var_declaration(self):

        localctx = BKITParser.Var_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(BKITParser.VAR)
            self.state = 91
            self.match(BKITParser.COLON)
            self.state = 92
            self.var_indentifier()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 93
                self.match(BKITParser.ASSIGN)
                self.state = 94
                self.literal()


            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 97
                self.match(BKITParser.COMMA)
                self.state = 98
                self.var_indentifier()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKITParser.ASSIGN:
                    self.state = 99
                    self.match(BKITParser.ASSIGN)
                    self.state = 100
                    self.literal()


                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_indentifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def array_dimension(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Array_dimensionContext)
            else:
                return self.getTypedRuleContext(BKITParser.Array_dimensionContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_var_indentifier




    def var_indentifier(self):

        localctx = BKITParser.Var_indentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_indentifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(BKITParser.ID)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.LS:
                self.state = 111
                self.array_dimension()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_dimensionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LS(self):
            return self.getToken(BKITParser.LS, 0)

        def INT_LIT(self):
            return self.getToken(BKITParser.INT_LIT, 0)

        def RS(self):
            return self.getToken(BKITParser.RS, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_array_dimension




    def array_dimension(self):

        localctx = BKITParser.Array_dimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_array_dimension)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(BKITParser.LS)
            self.state = 118
            self.match(BKITParser.INT_LIT)
            self.state = 119
            self.match(BKITParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(BKITParser.INT_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(BKITParser.FLOAT_LIT, 0)

        def BOOL_LIT(self):
            return self.getToken(BKITParser.BOOL_LIT, 0)

        def STRING_LIT(self):
            return self.getToken(BKITParser.STRING_LIT, 0)

        def ARRAY_LIT(self):
            return self.getToken(BKITParser.ARRAY_LIT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_literal




    def literal(self):

        localctx = BKITParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.INT_LIT) | (1 << BKITParser.FLOAT_LIT) | (1 << BKITParser.BOOL_LIT) | (1 << BKITParser.STRING_LIT) | (1 << BKITParser.ARRAY_LIT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def function_body(self):
            return self.getTypedRuleContext(BKITParser.Function_bodyContext,0)


        def param_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Param_declarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.Param_declarationContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_function_declaration




    def function_declaration(self):

        localctx = BKITParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_function_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(BKITParser.FUNCTION)
            self.state = 124
            self.match(BKITParser.COLON)
            self.state = 125
            self.match(BKITParser.ID)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.PARAM:
                self.state = 126
                self.param_declaration()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.function_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAM(self):
            return self.getToken(BKITParser.PARAM, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def var_indentifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_indentifierContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_indentifierContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_param_declaration




    def param_declaration(self):

        localctx = BKITParser.Param_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(BKITParser.PARAM)
            self.state = 135
            self.match(BKITParser.COLON)
            self.state = 136
            self.var_indentifier()
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 137
                self.match(BKITParser.COMMA)
                self.state = 138
                self.var_indentifier()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def statements(self):
            return self.getTypedRuleContext(BKITParser.StatementsContext,0)


        def END_BODY(self):
            return self.getToken(BKITParser.END_BODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_function_body




    def function_body(self):

        localctx = BKITParser.Function_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_function_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(BKITParser.BODY)
            self.state = 145
            self.match(BKITParser.COLON)
            self.state = 146
            self.statements()
            self.state = 147
            self.match(BKITParser.END_BODY)
            self.state = 148
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declarationContext,i)


        def stmt_assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Stmt_assignmentContext)
            else:
                return self.getTypedRuleContext(BKITParser.Stmt_assignmentContext,i)


        def stmt_if(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Stmt_ifContext)
            else:
                return self.getTypedRuleContext(BKITParser.Stmt_ifContext,i)


        def stmt_for(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Stmt_forContext)
            else:
                return self.getTypedRuleContext(BKITParser.Stmt_forContext,i)


        def stmt_while(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Stmt_whileContext)
            else:
                return self.getTypedRuleContext(BKITParser.Stmt_whileContext,i)


        def stmt_do_while(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Stmt_do_whileContext)
            else:
                return self.getTypedRuleContext(BKITParser.Stmt_do_whileContext,i)


        def stmt_break(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Stmt_breakContext)
            else:
                return self.getTypedRuleContext(BKITParser.Stmt_breakContext,i)


        def stmt_continue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Stmt_continueContext)
            else:
                return self.getTypedRuleContext(BKITParser.Stmt_continueContext,i)


        def stmt_call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Stmt_callContext)
            else:
                return self.getTypedRuleContext(BKITParser.Stmt_callContext,i)


        def stmt_return(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Stmt_returnContext)
            else:
                return self.getTypedRuleContext(BKITParser.Stmt_returnContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_statements




    def statements(self):

        localctx = BKITParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 150
                self.var_declaration()
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 167
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 165
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        self.state = 156
                        self.stmt_assignment()
                        pass

                    elif la_ == 2:
                        self.state = 157
                        self.stmt_if()
                        pass

                    elif la_ == 3:
                        self.state = 158
                        self.stmt_for()
                        pass

                    elif la_ == 4:
                        self.state = 159
                        self.stmt_while()
                        pass

                    elif la_ == 5:
                        self.state = 160
                        self.stmt_do_while()
                        pass

                    elif la_ == 6:
                        self.state = 161
                        self.stmt_break()
                        pass

                    elif la_ == 7:
                        self.state = 162
                        self.stmt_continue()
                        pass

                    elif la_ == 8:
                        self.state = 163
                        self.stmt_call()
                        pass

                    elif la_ == 9:
                        self.state = 164
                        self.stmt_return()
                        pass

             
                self.state = 169
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_assignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(BKITParser.ExpContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_stmt_assignment




    def stmt_assignment(self):

        localctx = BKITParser.Stmt_assignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stmt_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(BKITParser.ID)
            self.state = 171
            self.match(BKITParser.ASSIGN)
            self.state = 172
            self.exp(0)
            self.state = 173
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_ifContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(BKITParser.IF, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ExpContext)
            else:
                return self.getTypedRuleContext(BKITParser.ExpContext,i)


        def THEN(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.THEN)
            else:
                return self.getToken(BKITParser.THEN, i)

        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.StatementsContext)
            else:
                return self.getTypedRuleContext(BKITParser.StatementsContext,i)


        def END_IF(self):
            return self.getToken(BKITParser.END_IF, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def ELSE_IF(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ELSE_IF)
            else:
                return self.getToken(BKITParser.ELSE_IF, i)

        def ELSE(self):
            return self.getToken(BKITParser.ELSE, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_stmt_if




    def stmt_if(self):

        localctx = BKITParser.Stmt_ifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_stmt_if)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(BKITParser.IF)
            self.state = 176
            self.exp(0)
            self.state = 177
            self.match(BKITParser.THEN)
            self.state = 178
            self.statements()
            self.state = 186
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.ELSE_IF:
                self.state = 179
                self.match(BKITParser.ELSE_IF)
                self.state = 180
                self.exp(0)
                self.state = 181
                self.match(BKITParser.THEN)
                self.state = 182
                self.statements()
                self.state = 188
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 191
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ELSE:
                self.state = 189
                self.match(BKITParser.ELSE)
                self.state = 190
                self.statements()

